tests/compile-fail/integration__integration__image_sources__color_formats__bad_image.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: cannot transcode into unknown color format 8
  ┌─ <input>:7:17
  │
7 │     img_format: 8,
  │                 ^ unknown color format


